force-app/main/default/objects/Deliverable__c/fields/Audit_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Audit_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Reviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deliverables (Audit Reviewer)</relationshipLabel>
    <relationshipName>Deliverables1</relationshipName>
    <type>Lookup</type>
</CustomField>