force-app/main/default/objects/Deliverable__c/fields/Gold_Standard_Example__c.field-meta.xml
<CustomField>
    <fullName>Gold_Standard_Example__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gold Standard Example</label>
    <type>Checkbox</type>
</CustomField>