force-app/main/default/objects/Deliverable__c/fields/Link_to_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Deliverable__c</fullName>
    <label>Link to Deliverable</label>
    <type>Url</type>
</CustomField>