force-app/main/default/objects/Deliverable__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <description>7S Project pase</description>
    <inlineHelpText>7S Project Phase</inlineHelpText>
    <label>Project Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Methodology</valueSetName>
    </valueSet>
</CustomField>