force-app/main/default/objects/Deliverable__c/fields/Required_by_SOW__c.field-meta.xml
<CustomField>
    <fullName>Required_by_SOW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required by SOW?</label>
    <type>Checkbox</type>
</CustomField>