force-app/main/default/objects/Deliverable__c/fields/Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Signoff_Date__c</fullName>
    <label>Signoff Date</label>
    <type>Date</type>
</CustomField>