force-app/main/default/objects/Deliverable__c/fields/Signoff_Owner__c.field-meta.xml
<CustomField>
    <fullName>Signoff_Owner__c</fullName>
    <label>Signoff Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>