force-app/main/default/objects/Deliverable__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Phase__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
            <value>
                <fullName>Delivery to Sales handoff</fullName>
            </value>
            <value>
                <fullName>Deployment Workbook</fullName>
            </value>
            <value>
                <fullName>Design Comps</fullName>
            </value>
            <value>
                <fullName>JIRA Board</fullName>
            </value>
            <value>
                <fullName>Knowledge Transfer</fullName>
            </value>
            <value>
                <fullName>Lessons Learned</fullName>
            </value>
            <value>
                <fullName>Migration Plan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pre-flight Assessment</fullName>
            </value>
            <value>
                <fullName>Process Flow</fullName>
            </value>
            <value>
                <fullName>Project Kickoff</fullName>
            </value>
            <value>
                <fullName>Project Plan</fullName>
            </value>
            <value>
                <fullName>Project Workbook</fullName>
            </value>
            <value>
                <fullName>RACI</fullName>
            </value>
            <value>
                <fullName>Requirements Workbook</fullName>
            </value>
            <value>
                <fullName>Roadmap / Release Plan</fullName>
            </value>
            <value>
                <fullName>Sales to Delivery Handoff</fullName>
            </value>
            <value>
                <fullName>Sitemap</fullName>
            </value>
            <value>
                <fullName>Sprint Demo</fullName>
            </value>
            <value>
                <fullName>Sprint Plan</fullName>
            </value>
            <value>
                <fullName>Technical Design Document</fullName>
            </value>
            <value>
                <fullName>Test Plan</fullName>
            </value>
            <value>
                <fullName>Tollgate</fullName>
            </value>
            <value>
                <fullName>Toll Gate</fullName>
                <isActive>false</isActive>
                <label>Toll Gate</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>UAT Test Scripts</fullName>
            </value>
            <value>
                <fullName>User Stories</fullName>
                <isActive>false</isActive>
                <label>User Stories</label>
            </value>
            <value>
                <fullName>Wireframes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>