force-app/main/default/objects/Deliverable__c/fields/Weeks_Since_Last_Status_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Weeks_Since_Last_Status_Meeting__c</fullName>
    <description>Number of weeks since last status meeting</description>
    <formula>(TODAY()- Delivered_Date__c)/7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks Since Last Status Meeting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>