force-app/main/default/objects/Deliverable__c/recordTypes/Project_Deliverable.recordType-meta.xml
<RecordType>
    <fullName>Project_Deliverable</fullName>
    <active>true</active>
    <label>Project Deliverable</label>
</RecordType>