force-app/main/default/objects/Deliverable__c/recordTypes/Status_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Status_Meeting</fullName>
    <active>true</active>
    <label>Status Meeting</label>
</RecordType>