force-app/main/default/objects/Deliverable__c/validationRules/Required_fields_if_Status_is_Signed_Off.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_if_Status_is_Signed_Off</fullName>
    <active>true</active>
    <description>Requires signoff date and owner to be specified if deliverable status = signed off.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Signed Off&quot;),

OR(
ISBLANK(Signoff_Date__c),ISBLANK(Signoff_Owner__c))
)</errorConditionFormula>
    <errorMessage>To mark the Status as Signed Off, populate the Signoff Date and Signoff Owner.</errorMessage>
</ValidationRule>